# direct_stereo_slam

./: CMakeLists.txt  README.md  package.xml
cams/euroc/: T_stereo.yaml  camera0.txt  camera1.txt
cams/kaist/: T_stereo.yaml  camera0.txt  camera1.txt
cams/kitti/00_02/: camera0.txt  camera1.txt
cams/kitti/03/: camera1.txt
cams/kitti/04_10/: camera0.txt
cams/kitti/0_2/: T_stereo.yaml  camera1.txt
cams/kitti/3/: camera0.txt
cams/malaga/: T_stereo.yaml  camera0.txt  camera1.txt
cams/robotcar/: T_stereo.yaml  camera0.txt  camera1.txt
cams/tara/: T_stereo.yaml  cam0.yaml  cam1.yaml  camera0.txt  camera1.txt
cams/tum/: T_stereo.yaml
cams/tum/cam0/: camera.txt
cams/tum/cam1/: camera.txt
launch/: euroc.launch  kaist.launch  kitti.launch  kitti02_1321.launch  kitti3.launch  kitti412.launch  malaga.launch  robotcar.launch  sample.launch  tara.launch  tum.launch
launch/kitti/: kitti02_1321.launch  kitti3.launch  kitti412.launch
src/: FrontEnd.cpp  FrontEnd.h  SODSOSystem.cpp  SODSOSystem.h  main.cpp  so_dso_node.cpp  timing.h
src/dso_helpers/: FrontEndDebugStuff.cpp  FrontEndMarginalize.cpp  FrontEndOptPoint.cpp  FrontEndOptimize.cpp  SODSOSystemDebugStuff.cpp  SODSOSystemMarginalize.cpp  SODSOSystemOptPoint.cpp  SODSOSystemOptimize.cpp
src/loop_closure/: LoopHandler.cpp  LoopHandler.h  SODSOLoopHandler.cpp  SODSOLoopHandler.h
src/loop_closure/loop_detection/: ScanContext.cpp  ScanContext.h  search_place.h
src/loop_closure/pangolin_viewer/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinLoopViewer.cpp  PangolinLoopViewer.h
src/loop_closure/place_recognition/process_pts/: pts_align.h  pts_filter.h  pts_preprocess.h
src/loop_closure/place_recognition/scan_context/: ScanContext.cpp  ScanContext.h
src/loop_closure/place_recognition/utils/: PosesPts.h  find_closest_place.h  get_transformation.h  gps_recorder.cpp  icp.h  merge_point_clouds.h  print_progress.h
src/loop_closure/pose_estimation/: PoseEstimator.cpp  PoseEstimator.h  icp.h
src/loop_closure/process_pts/: generate_spherical_points.h  icp.h  merge_point_clouds.h
src/loop_closure/scan_context/: ScanContext.cpp  ScanContext.h  search_place.h
src/output_wrappers/: OutputWrapperLoop.cpp  OutputWrapperLoop.h
src/place_recognition/: processSC.m
src/place_recognition/process_pts/: pts_align.h  pts_filter.h  pts_preprocess.h
src/place_recognition/scan_context/: ScanContext.cpp  ScanContext.h
src/place_recognition/utils/: find_closeset_place.h  gps_recorder.cpp
src/scale_optimization/: ScaleAccumulator.h  ScaleOptimizer.cpp  ScaleOptimizer.h  TrackerAndScaler.cpp  TrackerAndScaler.h
